--- a/frontend/src/styles/Menu.css
+++ b/frontend/src/styles/Menu.css
@@ -1,5 +1,9 @@
 .menu-bar {
   position: relative;
+  /* width: 80vw; */
+  margin: 0 auto;
+  background: var(--primary-color); 
+  backdrop-filter: blur(10px);
 }
 
 .menu-bar ul {
@@ -7,12 +11,9 @@
   display: flex;
   justify-content: space-around;
   align-items: left;
-  background-color: #046900;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .menu-bar ul li {
-  color: white;
   padding: 0px;
   cursor: pointer;
   appearance: none;
@@ -27,6 +28,8 @@
 }
 
 .menu-bar ul li:hover {
-  color: #787878;
-  background-color: white
+  background-color: var(--secondary-color);
+  transform: scale(1.05); /* Slight scale-up effect */
+  transition: all 0.3s ease-in-out;
+  color: var(--text-hover);
 }
