--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,19 +1,19 @@
-.database {
+/* .database {
     position: relative;
-    padding-top: 17%; /* Space for the sticky elements */
-  }
+    padding-top: 22%;
+  } */
   
   /* Make MenuBar, AddWord, and Search sticky */
-.top {
+/* .top {
     position: fixed;
     top: 20px;
     left: 0;
     width: 100%;
-    z-index: 1000; /* Ensure it's on top of other elements */
-    backdrop-filter: blur(10px); /* Add a blur effect */
+    z-index: 1000; 
+    backdrop-filter: blur(10px);
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0));
-    color: white; /* Text color */
+    color: white; 
     display: inline;
-    justify-content: space-between; /* Align elements horizontally */
+    justify-content: space-between; 
     align-items: center;
-}
+} */
