--- a/frontend/src/styles/Table.css
+++ b/frontend/src/styles/Table.css
@@ -24,9 +24,9 @@
   text-align: left;
   font-weight: bold;
   white-space: nowrap;
-  z-index: 1;
+  /* z-index: 1; */
   top: 0;
-  position: sticky;
+  /* position: sticky; */
 }
 
 .table-content {
